--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
      <title>Portafolio de evidencias</title>
+     
 </head>
+
+
 <body>
+     <link rel="stylesheet" href="/index.css">
      <nav>
           <ul>
-               <li></li>
-               <li></li>
-               <li></li>
-               <li></li>
-               <li></li>
-               <li></li>
+               
+               <li>Inicio</li>
+               <li>Fundamentos</li>
+               <li>Diseño</li>
+               <li>Implementación</li>
+               <li>Acerca de...</li>
           </ul>
      </nav>
 
