--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
      <title>Portafolio de evidencias</title>
-     
+
+     <link rel="stylesheet" href="/index.css">
 </head>
 
 
 <body>
      <link rel="stylesheet" href="/index.css">
+     <h1>Portafolio de evidencias</h1>
      <nav>
           <ul>
                <li>Inicio</li>
