--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
      <title>Portafolio de evidencias</title>
-     <link rel="stylesheet" href="/resource/index.css">
+     <link rel="stylesheet" href="/resource/style.css">
 
 </head>
 
 
 <body>
-     <h2>Intento 2</h2>
+     <h2>Intento 3</h2>
      <h1>Portafolio de evidencias</h1>
      <nav>
           <ul>
