--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
      <meta charset="UTF-8">
-     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+     <base href="/">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
      <title>Portafolio de evidencias</title>
      <link rel="stylesheet" href="/resource/style.css"/>
@@ -14,7 +15,7 @@
 <body>
      <link rel="stylesheet" href="/resource/style.css"/>
 
-     <h2>Intento 5</h2>
+     <h2>Intento 6</h2>
      <h1>Portafolio de evidencias</h1>
      <nav>
           <ul>
