--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
      <title>Portafolio de evidencias</title>
-     <link rel="stylesheet" href="/resource/style.css"/>
+     <link rel="stylesheet" href="style.css"/>
 
 </head>
 
 
 <body>
-     <link rel="stylesheet" href="/resource/style.css"/>
+     <link rel="stylesheet" href="style.css"/>
 
-     <h2>Intento 7</h2>
+     <h2>Intento 7.1</h2>
      <h1>Portafolio de evidencias</h1>
      <nav>
           <ul>
