--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
      <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
      <base href="/">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 
      <title>Portafolio de evidencias</title>
      <link rel="stylesheet" href="https://inigo1405.github.io/style.css"/>
@@ -15,7 +16,7 @@
 <body>
      <link rel="stylesheet" href="https://inigo1405.github.io/style.css"/>
 
-     <h2>Intento 8</h2>
+     <h2>Intento 9</h2>
      <h1>Portafolio de evidencias</h1>
      <nav>
           <ul>
