--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
      <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 
      <title>Portafolio de evidencias</title>
-     <link rel="stylesheet" href="https://inigo1405.github.io/style.css"/>
+     <link rel="stylesheet" href="style.css"/>
 
 </head>
 
 
 <body>
-     <link rel="stylesheet" href="https://inigo1405.github.io/style.css"/>
-
-     <h2>Intento 9</h2>
+     <h2>Intento 10</h2>
      <h1>Portafolio de evidencias</h1>
      <nav>
           <ul>
