--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
      <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
      <base href="/">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 
      <title>Portafolio de evidencias</title>
-     <link rel="stylesheet" href="style.css"/>
+     <link rel="stylesheet" href="../Protafolio-evidencias/style.css"/>
 
 </head>
 
 
 <body>
-     <h2>Intento 10</h2>
+     <h2>Intento 11</h2>
      <h1>Portafolio de evidencias</h1>
      <nav>
           <ul>
