--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
      <title>Portafolio de evidencias</title>
-     <link rel="stylesheet" href="../Protafolio-evidencias/style.css"/>
+     <link rel="stylesheet" href="/style.css"/>
 
 </head>
 
 
 <body>
-     <h2>Intento 11</h2>
      <h1>Portafolio de evidencias</h1>
      <nav>
           <ul>
