--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
      <title>Portafolio de evidencias</title>
-     <link rel="stylesheet" href="../Protafolio-evidencias/style.css"/>
+     <!-- Para css github pages -->
+     <link rel="stylesheet" href="../Protafolio-evidencias/style.css"/> 
+     <!-- Para css local -->
      <link rel="stylesheet" href="style.css"/>
 </head>
 
