--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <!-- Para css github pages -->
      <link rel="stylesheet" href="../Protafolio-evidencias/style.css"/> 
      <!-- Para css local -->
-     <link rel="stylesheet" href="style.css"/>
+     <!-- <link rel="stylesheet" href="style.css"/>-->
 </head>
 
 
@@ -18,7 +18,7 @@
      <h1>Portafolio de evidencias</h1>
      <nav>
           <ul>
-               <li>Inicio</li>
+               <li><a>Inicio</a></li>
                <li>Fundamentos</li>
                <li>Diseño</li>
                <li>Implementación</li>
