--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      <h1>Portafolio de evidencias</h1>
      <nav>
           <ul>
-               <li><a>Inicio</a></li>
+               <li><a href="#inicio">Inicio</a></li>
                <li>Fundamentos</li>
                <li>Diseño</li>
                <li>Implementación</li>
