--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li>Inicio</li>
                     <li>Fundamentos
                          <ul>
-                              <li>Marco Teórico</li>
+                              <li><a href="">Marco Teórico</a></li>
                               <li>Contexto de Proyecto</li>
                               <li>Metodología</li>
                               <li>Prototipo</li>
@@ -38,7 +38,6 @@
                     <li>Diseño e Implementación</li>
                     <li>Acerca de...</li>
                </ul>
-
 
 
           </div>
