--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
      <title>Portafolio de evidencias</title>
-
+     <link rel="icon" type="image/x-icon" href="https://repo.iberopuebla.mx/imagenes/img/bigRubrica/rubrica_fblanco_trojo.png">
+     
      <!-- Para css host github pages -->
      <link rel="stylesheet" href="../Protafolio-evidencias/index.css"/> 
 
