--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
      <title>Portafolio de evidencias</title>
-     <link rel="icon" type="image/x-icon" href="https://repo.iberopuebla.mx/imagenes/img/bigRubrica/rubrica_fblanco_trojo.png">
+     <link rel="icon" type="image/x-icon" href="https://laudex.mx/images/universities/uploads/403879_ibero-puebla.png">
      
      <!-- Para css host github pages -->
      <link rel="stylesheet" href="../Protafolio-evidencias/index.css"/> 
