--- a/marco.html
+++ b/marco.html
@@ -6,7 +6,7 @@
      <base href="/">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-     <title>Portafolio de evidencias/Marco teórico</title>
+     <title>Portafolio de evidencias</title>
 
      <!-- Para css host github pages -->
      <link rel="stylesheet" href="../Protafolio-evidencias/index.css"/> 
@@ -37,6 +37,9 @@
                </ul>
           </nav>
      </header>
+     
+
+     <img src="Inenieros de software.jpg" alt="Ing. Software">
 
 
 </body>
