--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <link rel="stylesheet" href="../Protafolio-evidencias/index.css"/> 
 
      <!-- Para css host local -->
-     <link rel="stylesheet" href="../Protafolio-evidencias/index.css"/>
+     <link rel="stylesheet" href="index.css"/>
 
 </head>
 
@@ -22,11 +22,11 @@
           <nav class="container">
                <h2>Portafolio de evidencias</h2>     
                <ul>
-                    <li><a href="../Protafolio-evidencias/index.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li>Fundamentos
                          <ul>
-                              <li> <a href="../Protafolio-evidencias/marco.html">Marco Teórico</a> </li>
-                              <li> <a href="../Protafolio-evidencias/contexto.html">Contexto de Proyecto</a> </li>
+                              <li> <a href="./marco.html">Marco Teórico</a> </li>
+                              <li> <a href="./contexto.html">Contexto de Proyecto</a> </li>
                               <li>Metodología</li>
                               <li>Prototipo</li>
                          </ul>
