--- a/marco.html
+++ b/marco.html
@@ -39,7 +39,7 @@
      </header>
      
 
-     <img src="./Inenieros de software.jpg" alt="Ing. Software">
+     <img src="./software.jpg" alt="Ing. Software">
 
 
 </body>
