--- a/contexto.html
+++ b/contexto.html
@@ -44,7 +44,7 @@
           y el entretenimiento para recaudar fondos con el mismo propósito principal.
      </p>
 
-     <img src="Mapa.jpg" alt="Mapa">
+     <img src="./Mapa.jpg" alt="Mapa">
 
      <h2>Misión</h2>
      <p>La misión de la empresa consiste en elevar los niveles de experiencia y entretenimiento del cliente todo con el fin de mejorar los niveles de dopamina de la sociedad actual de un modo más natural, dando momento de felicidad con la familia y el riesgo.</p>
