--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li>Fundamentos
                          <ul>
                               <li> <a href="./marco.html">Marco Teórico</a> </li>
-                              <li> <a href="./contexto.html">Contexto de Proyecto</a> </li>
+                              <li> <a href="../Protafolio-evidencias/contexto.html">Contexto de Proyecto</a> </li>
                               <li>Metodología</li>
                               <li>Prototipo</li>
                          </ul>
