--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
           <nav class="container">
                <h2>Portafolio de evidencias</h2>     
                <ul>
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="../Protafolio-evidencias/index.html">Inicio</a></li>
                     <li>Fundamentos
                          <ul>
-                              <li> <a href="./marco.html">Marco Teórico</a> </li>
+                              <li> <a href="../Protafolio-evidencias/marco.html">Marco Teórico</a> </li>
                               <li> <a href="../Protafolio-evidencias/contexto.html">Contexto de Proyecto</a> </li>
                               <li>Metodología</li>
                               <li>Prototipo</li>
