--- a/marco.html
+++ b/marco.html
@@ -22,11 +22,11 @@
           <nav class="container">
                <h2>Portafolio de evidencias</h2>     
                <ul>
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="../Protafolio-evidencias/index.html">Inicio</a></li>
                     <li>Fundamentos
                          <ul>
-                              <li> <a href="marco.html">Marco Teórico</a> </li>
-                              <li> <a href="contexto.html">Contexto de Proyecto</a> </li>
+                              <li> <a href="../Protafolio-evidencias/marco.html">Marco Teórico</a> </li>
+                              <li> <a href="../Protafolio-evidencias/contexto.html">Contexto de Proyecto</a> </li>
                               <li>Metodología</li>
                               <li>Prototipo</li>
                          </ul>
@@ -39,7 +39,7 @@
      </header>
      
 
-     <img src="./software.jpg" alt="Ing. Software">
+     <img src="../Protafolio-evidencias/software.jpg" alt="Ing. Software">
 
 
 </body>
