--- a/contexto.html
+++ b/contexto.html
@@ -22,11 +22,11 @@
           <nav class="container">
                <h2>Portafolio de evidencias</h2>     
                <ul>
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="../Protafolio-evidencias/index.html">Inicio</a></li>
                     <li>Fundamentos
                          <ul>
-                              <li> <a href="marco.html">Marco Teórico</a> </li>
-                              <li> <a href="contexto.html">Contexto de Proyecto</a> </li>
+                              <li> <a href="../Protafolio-evidencias/marco.html">Marco Teórico</a> </li>
+                              <li> <a href="../Protafolio-evidencias/contexto.html">Contexto de Proyecto</a> </li>
                               <li>Metodología</li>
                               <li>Prototipo</li>
                          </ul>
@@ -44,7 +44,7 @@
           y el entretenimiento para recaudar fondos con el mismo propósito principal.
      </p>
 
-     <img src="./Mapa.jpg" alt="Mapa">
+     <img src="../Protafolio-evidencias/Mapa.jpg" alt="Mapa">
 
      <h2>Misión</h2>
      <p>La misión de la empresa consiste en elevar los niveles de experiencia y entretenimiento del cliente todo con el fin de mejorar los niveles de dopamina de la sociedad actual de un modo más natural, dando momento de felicidad con la familia y el riesgo.</p>
