--- a/contexto.html
+++ b/contexto.html
@@ -58,7 +58,7 @@
      <a style="color: blue;" href="https://drive.google.com/file/d/1Z02dtg2GUpuKko8aXrV6LaLybmeI7JvL/view?usp=share_link">Diagrama de navegación</a>
      <br>
      <br>
-     <a style="color: blue;" href="https://drive.google.com/file/d/1hkiAPr42CfXgVAsYBECxWJfZHAta3QaV/view?usp=share_link"> Pantallas de baja resolución</a>
+     <a style="color: blue;" href="https://www.figma.com/file/RpWbAXZjSsGlNM9XhOCMFV/Pantallas-baja-resoluci%C3%B3n-CU_02---CU_04-%26%26-CU_06---CU_07?type=whiteboard&node-id=0-1&t=E7Lcn3XwL8Kaj8Ix-0"> Pantallas de baja resolución</a>
 
      <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;" data-page-width="453" data-page-height="640"><iframe style="position:absolute;top:0;left:0;width:100%;height:100%;"   src="https://www.yumpu.com/es/embed/view/sar29tyLdh0JTF1R" frameborder="0" allowfullscreen="true"  allowtransparency="true"></iframe><br><a href="https://www.yumpu.com/es/document/view/68019377/documento-final" title="Documento final" target="_blank">Documento final</a></div>
 </body>
